# triflow

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: action-selftest.yml  ci.yml  docs.yml  release.yml
adr/0001-metadata-only-introspection/: index.html
adr/0002-subprocess-sandboxing/: index.html
adr/0003-local-llm-opt-in/: index.html
complements/: index.html
docs/: complements.md  github-action.md  index.md  installation.md  rules.md  taxonomy.md  threat-model.md  usage.md
docs/adr/: 0001-metadata-only-introspection.md  0002-subprocess-sandboxing.md  0003-local-llm-opt-in.md
examples/: github-workflow.yml  mcp.json
examples/skills/leaky/: SKILL.md
examples/skills/tidy/: SKILL.md
github-action/: index.html
installation/: index.html
rules/: index.html
search/: search_index.json
src/triflow/: __init__.py  catalog.py  classify.py  cli.py  discovery.py  engine.py  introspect.py  llm.py  models.py  scan.py  skill.py
src/triflow/data/: capability_rules.yaml
src/triflow/report/: __init__.py  console.py  json_report.py  sarif.py
taxonomy/: index.html
tests/: fleet_fixtures.py  test_classify.py  test_cli.py  test_discovery.py  test_docs.py  test_engine.py  test_integration.py  test_introspect.py  test_llm.py  test_report.py  test_scan.py  test_skill.py  test_smoke.py
tests/fixtures/configs/: bad_shapes.json  claude_desktop_config.json  cursor_mcp.json  dot_claude.json  windsurf_mcp_config.json
tests/fixtures/servers/: demo_server.py  exfil_server.py  ingress_server.py  private_data_server.py  slow_server.py
tests/fixtures/skills/: nofrontmatter.md  wildcard.md
tests/fixtures/skills/exfil/: SKILL.md
tests/fixtures/skills/noscope/: SKILL.md
tests/fixtures/skills/overbroad/: SKILL.md
tests/fixtures/skills/safe/: SKILL.md
threat-model/: index.html
usage/: index.html
