[project]
name = "triflow"
version = "0.1.0"
description = "Cross-server MCP toxic-flow (lethal-trifecta) analyzer and SKILL.md linter"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Tom Price", email = "tomprice13@pm.me" }]
requires-python = ">=3.12"
keywords = [
  "mcp",
  "security",
  "lethal-trifecta",
  "prompt-injection",
  "agent-security",
  "sarif",
  "static-analysis",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "anyio>=4.14.1",
  "mcp>=1.9",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Lonkins/triflow"
Documentation = "https://lonkins.github.io/triflow/"
Repository = "https://github.com/Lonkins/triflow"
Issues = "https://github.com/Lonkins/triflow/issues"

[project.scripts]
triflow = "triflow.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triflow"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S", "PTH"]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607"]

[tool.mypy]
strict = true
files = ["src", "tests"]
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
source_pkgs = ["triflow"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
